b=574583 Extend X11 windowless Flash Player drawing offset workaround to handle clips also r=roc